# catena-ai

./: .coverage  .gitignore  README.md  core.py  data.json  debug.txt  load_tools.py  paths.py  pyproject.toml  requirements.txt  requirements_.txt  setup.py  system.txt  t.py  testbus.py  testmeta.py  tt.py  ttt.py  ttttt.py  user.txt  versions.json
.github/: main.yaml
agents/: agent_copy_2.py  agent_types.py
agents/tools/: tool.py
catena/: settings.py
catena/agents/: agent copy.py  agent.py
catena/catena_core/: __init__.py  paths.py
catena/catenasmith/: __init__.py  cli_tools.py
catena/cli/: app.py  tools.py
catena/error/: agenterr.py
catena/llmchain/: __init__.py  message.py  response.py
catena/retriever/: core.py  fileparse.py
catena_ai/: paths.py  settings.py
catena_ai/catena_core/: agents.py  load_tools.py  paths.py  tools.py
catena_ai/catenasmith/: __init__.py
catena_ai/cli/: app.py  commands.py  tools.py
catena_ai/error/: base_err.py  chainerr.py  modelerr.py  toolserr.py  utilserr.py  viserr.py
catena_ai/llmchain/: message.py
catena_ai/retriever/: __init__.py  core.py  fileparse.py
catena_core/: __init__.py  alias.py  callbacks.py  cconf.py  nodes.py  settings.py  tools.py  utils.py
catena_core/alias/: builtin.py
catena_core/error/: base.py  (+4 more)
catenasmith/: cli_tools.py  t.py
examples/: llmchain.ipynb  settings.ipynb
llmchain/: __init__.py  memory.py  models.py  parser.py  prompt.py
pllm/: module.py
retriever/: core.py  fileparse.py
tests/: test_chain.py  test_message.py  test_model.py  test_prompt.py  test_tool.py
(+108 files in other folders)
