[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catena"
version = "0.0.1"
description = "An agent framework for Python"
authors = [
    { name = "Jianqing Wang", email = "18353419066@163.com" }
]
dependencies = []
readme = "README-pkg.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { "Source" = "https://github.com/Asianfleet/catena" }
[project.scripts]
catena = "catena.cli.cli_app:main"